# CERT_COPILOT

./: .env.tmpl  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: README.md  index.html
app/css/: styles.css
app/js/: app.js  config.js  router.js  store.js  tour.js  ui.js
app/js/api/: client.js  mock.js
app/js/screens/: aar.js  briefing.js  home.js  missionDesk.js  ops.js  scenarios.js
app/tools/: safety-scan.js
architecture/: API_SPEC.md  INTEGRATION_ADAPTERS.md  MODE_REDESIGN_CYBER_DEFENSE_DASHBOARD_HELPDESK.md  SERVICE_ARCHITECTURE_BLUEPRINT.md
assets/presentation/cert-copilot/: README.md
data/stealthmole/demo/20260705T000000Z-demo/: cds.json  cl.json  gm.json  (+3 more)
src/: README.md
src/d4d/: __init__.py  build_dataset.py  build_demo_dataset.py  collect_stealthmole.py  config.py  report.py  scenario.py
src/d4d/api/: __init__.py  envelope.py  main.py
src/d4d/fixtures/: __init__.py  operations.py  readiness.py
src/d4d/llm/: __init__.py  provider_port.py
src/d4d/repositories/: __init__.py  mission.py  operations.py
src/d4d/services/: __init__.py  dashboard_service.py  helpdesk_service.py  knowledge_service.py  mission_runtime.py  operations_runtime.py  scenario_catalog.py
src/d4d/stealthmole/: __init__.py  auth.py  client.py  dataset_loader.py  errors.py  loader.py  redaction.py  sanitize.py
tests/: test_api_b01_b02.py  test_api_real_server_e2e.py  test_demo_dataset.py  test_operations_b08.py  test_operations_b09.py  test_operations_b10.py  test_operations_b11.py  test_operations_b12.py  test_repository_storage.py
(+10 files in other folders)
