[project]
name = "d4d-readiness"
version = "0.1.0"
description = "D4D T5 cyber-defense readiness simulator backend and shared intelligence core."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "uvicorn[standard]>=0.30,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
